--- a/solidare/portal/templates/candidatos.html
+++ b/solidare/portal/templates/candidatos.html
@@ -249,7 +249,7 @@
 
     function salvarEVoltar() {
         alert('Alterações salvas com sucesso!');
-        window.location.href = '/professor/';
+        window.location.href = '/avisos/';
     }
 </script>
 {% endblock %}
