--- a/solidare/portal/templates/turmas_aluno.html
+++ b/solidare/portal/templates/turmas_aluno.html
@@ -256,11 +256,26 @@
 
     <div class="sidebar" id="sidebar">
         <h3>Menu</h3>
-        <button onclick="window.location.href='/avisosA/'">Avisos</button>
-        <button onclick="window.location.href='/turmas/aluno/'">Minhas Turmas</button>
-        <button onclick="window.location.href='/calendario/'">Calendário</button>
-        <button onclick="window.location.href='/chat/aluno/'">Chat</button>
-        <button onclick="window.location.href='/horario/'">Horário</button>
+        <button onclick="window.location.href='/avisosA/'">
+            <img src="/static/portal/img/avisos.png" alt="Avisos" style="width:20px; height:20px; margin-right:8px;">
+            Avisos
+        </button>
+        <button onclick="window.location.href='/turmas/aluno/'">
+            <img src="/static/portal/img/turmas.png" alt="Minhas Turmas" style="width:20px; height:20px; margin-right:8px;">
+            Minhas Turmas
+        </button>
+        <button onclick="window.location.href='/calendario/'">
+            <img src="/static/portal/img/papel.png" alt="Calendário" style="width:20px; height:20px; margin-right:8px;">
+            Calendário
+        </button>
+        <button onclick="window.location.href='/chat/aluno/'">
+            <img src="/static/portal/img/chat.png" alt="Chat com Alunos" style="width:20px; height:20px; margin-right:8px;">
+            Chat com Alunos
+        </button>
+        <button onclick="window.location.href='/horario'">
+            <img src="/static/portal/img/livro.png" alt="Diario de Classe" style="width:20px; height:20px; margin-right:8px;">
+            Diário de Classe
+        </button>
     </div>
 
     <div class="main">
